# rp-edge-status-controller

./: .gitignore  AGENTS.md  README.md  dynamic_waypoint_sequence_plan.md  instructions.txt  isaacsim_cones_waypoints.json  main.py  pyproject.toml  server.py  testbed_topology.json  testbed_topology.py  topology_loader.py  visualize_topology.py
image/: background.png.bak
ros_packages/rp_edge_status_bridge/: README.md  package.xml  setup.cfg  setup.py
ros_packages/rp_edge_status_bridge/launch/: telemetry_bridge.launch.py
ros_packages/rp_edge_status_bridge/rp_edge_status_bridge/: telemetry_bridge_node.py
