<?xml version="1.0"?>
<package format="3">
  <name>rp_edge_status_bridge</name>
  <version>0.1.0</version>
  <description>ROS 2 sidecar that forwards waypoint topics to the edge status controller.</description>

  <maintainer email="maintainer@example.com">Maintainer</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
